Fixed z-index and shadow on header bar

--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,8 @@ header {
   height: 50px;
   position: fixed;
   width: 100%;
+  z-index: 2;
+  box-shadow: 0 10px 20px -20px rgba(0, 0, 0, 0.19), 0 6px 6px -6px rgba(0, 0, 0, 0.23);
 }
 
 header .search {
